# hermes

./: .gitignore  Cargo.toml  LICENSE  README  README.md  diff
.github/workflows/: release.yml
src/: args.rs  cmd.rs  config.rs  file.rs  main.rs  models.rs  otp.rs  ui.rs
tests/: cli.rs  integration_test.rs
