[package]
name = "hermes"
version = "0.2.5"
edition = "2021"
description = "Hermes: CLI OTP manager app"
homepage = "https://github.com/riccione/hermes"
documentation = "https://github.com/riccione/hermes"
repository = "https://github.com/riccione/hermes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
data-encoding = "2.4.0"
dirs = "5.0.1"
magic-crypt = "3.1.12"
rpassword = "7.3.1"
totp-lite = "2.0.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
rand = "0.8.5"
