[package]
name = "hermes"
version = "0.2.7"
edition = "2021"
description = "Hermes: CLI OTP manager app"
homepage = "https://github.com/riccione/hermes"
documentation = "https://github.com/riccione/hermes"
repository = "https://github.com/riccione/hermes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
data-encoding = "2.8.0"
dirs = "6.0.0"
magic-crypt = "4.0.1"
rpassword = "7.3.1"
totp-lite = "2.0.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
rand = "0.9.0"
