[package]
name = "hermes"
version = "0.3.0"
edition = "2021"
description = "Hermes: CLI OTP manager app"
homepage = "https://github.com/riccione/hermes"
documentation = "https://github.com/riccione/hermes"
repository = "https://github.com/riccione/hermes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
data-encoding = "2.10.0"
dirs = "6.0.0"
magic-crypt = "4.0.1"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
totp-lite = "2.0.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
rand = "0.9.0"
serde_json = "1.0.148"
tempfile = "3.24.0"
